@@ -8,6 +8,7 @@ $Id$
 	   by the reporter)
 	 - add SanDisk SSD Plus series (ticket #674)
 	 - add XceedIOPS SSD series (ticket #672)
+	 - add Crucial BX200 SSD (ticket #643)
 
 2016-03-30  Christian Franke  <franke@computer.org>
 
